# otus_task2

./: .travis.yml  CMakeLists.txt  bin_id.cpp  ipaddr.cpp  ipaddr.h  main.cpp  test.cpp  test.h
